--- a/day29/01-headline.html
+++ b/day29/01-headline.html
@@ -6,23 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-
     <h1>headline tag</h1>
     <hr>
 
     <p>
-        문서의 주요 제목을 설정하는 태그<br>
+        문서의 주요 제목을 설정하는 태그 <br>
         페이지 검색에도 활용되는 요소이다<br>
-        1 ~ 6 사이의 레벨이 있으며,
-        숫자가 낮을 수록 중요도가 높다<br>
-        h1 태그는 페이지 당 1회만 사용하는 것을 권장한다
+        1~6사이의 레벨이 있으며,
+        숫자가 낮을 수록 중요도가 높다.<br>
+        h1태그는 페이지 당 1회만 사용하는 것을 권장한다.
     </p>
 
-    <h2>Hello, world (level 2)</h2>
-    <h3>Hello, world (level 3)</h3>
-    <h4>Hello, world (level 4)</h4>
-    <h5>Hello, world (level 5)</h5>
-    <h6>Hello, world (level 6)</h6>
-    
+    <h2>Hello, World(level2)</h2>
+    <h3>Hello, World(level2)</h3>
+    <h4>Hello, World(level2)</h4>
+    <h5>Hello, World(level2)</h5>
+    <h6>Hello, World(level2)</h6>
 </body>
 </html>
