--- a/day29/07-a.html
+++ b/day29/07-a.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>07-a.html</title>
+    <title>Document</title>
 </head>
 <body>
-
     <h1>07-a.html</h1>
     <hr>
-
     <ul>
+
         <li><a href="07-a.html">07-a</a></li>
         <li><a href="07-b.html">07-b</a></li>
         <li><a href="07-c.html">07-c</a></li>
     </ul>
 
-    <img src="image/짱구.png" alt="">
-    
+    <img src="image/수지.png" alt="">
 </body>
 </html>
