--- a/day30/02-selector.html
+++ b/day30/02-selector.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>02-selector.html</title>
     <style>
-        thead {             /* 태그 선택자 */
-            background-color: black;        /* 배경색상 */
-            border: 1px solid grey;         /* 테두리 */
+        thead{/* 태그 선택자*/
+            background-color: black;
+            border: 1px solid black;
         }
-        #selectorTable {    /* id 선택자 */
-            border-collapse: collapse;          /* 테이블 칸 배치 */
-            margin: 20px auto;                  /* 테두리 바깥쪽 여백 */
+        #selectorTable{/*id 선택자*/
+            border-collapse: collapse;
+            margin: 20px auto;          /* 20px : 상하 auto : 좌우, auto인경우 자동으로 양쪽 여백 균형을 맞춰준다.(가운데정렬)*/
         }
-        .tag {              /* class 선택자 */
-            font-family: 'Consolas';            /* 글꼴 */
+        .tag {/* class 선택자*/
+            font-family: 'Consolas';
         }
-        thead > tr {        /* (직계) 자손 선택자*/
-            color: white;                     /* 글자 색상 */
+        thead > tr{/* 자손선택자 */
+            color: white;
         }
-        tbody td {          /* (먼) 후손 선택자 */
-            border: 1px solid grey;             /* 테두리 */
-            padding: 5px 10px;                    /* 테두리 안쪽 여백 */
+        tbody td{/*직계도 포함하고 멀리 있는것도 포함, (먼)후손 선택자*/
+            border: 1px solid grey;
+            padding : 5px 10px;
         }
     </style>
 </head>
 <body>
-
+    
     <h1>02-selector.html</h1>
-    <hr>
+    <br>
 
     <table id="selectorTable">
         <thead>
@@ -37,7 +37,7 @@
                 <th>예시</th>
                 <th>효과</th>
             </tr>
-        </thead>        
+        </thead>
         <tbody>
             <tr>
                 <td>태그 선택자</td>
@@ -45,28 +45,28 @@
                 <td>지정한 태그에 해당하는 모든 요소를 선택한다</td>
             </tr>
             <tr>
-                <td>id 선택자</td>
+                <td>id선택자</td>
                 <td class="tag">#table</td>
                 <td>지정한 id에 해당하는 요소 하나를 선택한다</td>
             </tr>
             <tr>
                 <td>class 선택자</td>
-                <td class="tag">.item</td>
+                <td class="tag">.table</td>
                 <td>지정한 class에 해당하는 모든 요소를 선택한다</td>
             </tr>
             <tr>
                 <td>자손 선택자</td>
-                <td class="tag">A > B</td>
-                <td>A요소 바로 하위에 포함된 B요소들을 모두 선택한다</td>
+                <td class="tag">A>B</td>
+                <td>A요소 바로 하위에 포함된 B요소들을 모두 선택한다.</td>
             </tr>
             <tr>
                 <td>후손 선택자</td>
                 <td class="tag">A B</td>
-                <td>A요소 하위의 모든 계층에 포함된 B요소들을 모두 선택한다</td>
+                <td>A요소 하위의 모든 계층에 포함된 B요소들을 모두 선택한다.</td>
             </tr>
         </tbody>
-    </table>
 
+    </table>
     
 </body>
 </html>
