--- a/day30/03-border.html
+++ b/day30/03-border.html
@@ -1,67 +1,60 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>03-border.html</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>03.border.html</title>
     <style>
-        table {
+        table{
             border-collapse: collapse;
         }
-        td {
+        td{
             margin: 0;
             border: 1px solid black;
             padding: 5px 10px;
-            /* padding : [all];                         */
-            /* padding : [top-bottom] [left-right];     */
-            /* padding : [top] [right] [bottom] [left]; */
+            /* padding : top right bottom left(4가지)
+                         top-bottom  left-right (2가지)
+                         all                  (1가지)
+                         */
         }
+        
     </style>
-</head>
-<body>
-
+  </head>
+  <body>
     <h1>03-border.html</h1>
-    <hr>
+    <hr />
 
     <table>
-        <tr>
-            <td>margin</td>
-            <td>테두리 바깥쪽 여백</td>
-        </tr>
-        <tr>
-            <td>border</td>
-            <td>테두리</td>
-        </tr>
-        <tr>
-            <td>padding</td>
-            <td>테두리 안쪽 여백</td>
-        </tr>
+      <tr>
+        <td>margin</td>
+        <td>테두리 바깥쪽 여백</td>
+      </tr>
+      <tr>
+        <td>border</td>
+        <td>테두리</td>
+      </tr>
+      <tr>
+        <td>padding</td>
+        <td>테두리 안쪽 여백</td>
+      </tr>
     </table>
-
     <style>
         div {
             width: 100px;
             height: 100px;
         }
         #item1 {
+            border:  2px solid black;
             margin: 20px auto;
-            border: 2px solid black;
-            padding: 10px;
+            padding: 20px;
         }
         #item2 {
-            margin: 10px;
+            margin: 10px auto;
             border: 3px solid red;
             padding: 20px 40px;
         }
     </style>
-    
     <div id="item1">item1</div>
     <div id="item2">item2</div>
-
-
-
-
-
-
-</body>
+  </body>
 </html>
