--- a/day30/04-box.html
+++ b/day30/04-box.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>04-box.html</title>
     <style>
-        #wrap {
+        #wrap{
             width: 400px;
             height: 400px;
             margin: auto;
             border: 3px solid black;
             padding: 0;
         }
-        .row {
-            /* 내부 요소를 가로로 배치한다 */
+        .row{
+            /*내부 요소를 가로로 배치한다.*/
             display: flex;
         }
-        .box {
-            /* border와 padding을 고려하여 전체크기를 계산한다 */
-            box-sizing: border-box;
-
-            margin: 10px;
+        .box{
+            /* border와 padding을 고려하여 전체크기를 계산한다. */
+            padding : 2px;
+            border: 1px solid red;
             width: 100px;
             height: 100px;
-            border: 1px solid red;
-            padding: 10px;
+            box-sizing: border-box;
+            margin: 10px;
         }
     </style>
 </head>
 <body>
-
+    
     <h1>04-box.html</h1>
     <hr>
 
@@ -50,6 +49,5 @@
             <div class="box">9</div>
         </div>
     </div>
-    
 </body>
 </html>
