--- a/day30/07-background.html
+++ b/day30/07-background.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>07-background.html</title>
     <style>
-        .item {
-            /* background-image: url('image/danbi.jpg'); */
+        .item{
+            /*background-image: url('image/맹구.png');*/
             background-repeat: no-repeat;
-            background-size: auto 100%;     /* 너비 높이 */
+            background-size: auto 100%; /* 너비(auto) 높이(100%)*/
             background-position: center;
             width: 300px;
             height: 300px;
             border: 2px solid red;
         }
         .item > p {
-            color: white;
+            color: purple;
             font-size: 20px;
             font-weight: bold;
             margin: 0;
         }
-        div.flex {
+        div.flex{
             display: flex;
             width: 1600px;
             margin: auto;
@@ -28,19 +28,16 @@
     </style>
 </head>
 <body>
-
     <h1>07-background.html</h1>
     <hr>
-
     <div class="flex">
-        <div class="item" style="background-image: url('image/danbi.jpg');">
-            <p>단비꺼야</p>
-        </div>
-        <div class="item" style="background-image: url('image/calmdownman.jpg');"></div>
-        <div class="item" style="background-image: url('image/kong.jpg');"></div>
-        <div class="item" style="background-image: url('image/jisoo.png');"></div>
-        <div class="item" style="background-image: url('image/iu.jpg');"></div>
+
+        <div class="item" style="background-image: url(image/수지.png);"></div>
+        <div class="item" style="background-image: url('image/철수.png');"></div>
+        <div class="item" style="background-image: url('image/짱아.png');"></div>
+        <div class="item" style="background-image: url('image/유리.png');"></div>
+        <div class="item" style="background-image: url('image/짱구.png');"></div>       
+        
     </div>
-    
 </body>
 </html>
