--- a/day31/03-flex.html
+++ b/day31/03-flex.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>03-flex.html</title>
+    <title>Document</title>
     <style>
-        #header {
-            display: flex;
+        #header{
+            display: flex; /*flex는 내부요소를 정렬한다.*/
             justify-content: center;
             border: 1px dashed red;
         }
-        #main {
+        #main{
             display: flex;
             border: 1px dashed orange;
         }
-        #nav {
+        #nav{
             flex: 1;
-            border: 1px dashed green;
+            border: 1px dashed rgb(90, 228, 90);
         }
-        #content {
-            flex: 4;
+        #content{
+            flex:4;
             border: 1px dashed blue;
         }
-        #nav > ul {
+        #nav > ul{
             width: 200px;
-            height: 300px;
-            list-style: none;
+            height: 200px;
+            
             display: flex;
-            flex-direction: column; /* 기본값 : row */
-            /* flexbox의 중심축이 돌아간다 */
-            justify-content: center;
+            flex-direction: row; /* 기본값 : row flexbox의 중심축이 돌아간다*/
+            list-style: none;
+            justify-content: flex-end;
         }
     </style>
 </head>
 <body>
-    
-    <h1>03-flex.html</h1>
+    <h1>flex.html</h1>
     <hr>
 
     <div id="header">
         <h2>TITLE</h2>
     </div>
-
     <div id="main">
         <div id="nav">
             <ul>
@@ -51,11 +49,8 @@
             </ul>
         </div>
         <div id="content">
-            <h3>Hello world</h3>
+            <h3>Hello World</h3>
         </div>
     </div>
-
-
-
 </body>
 </html>
