--- a/day31/07-float.html
+++ b/day31/07-float.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>07-float.html</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <h1>07-float.html</h1>
+    <!-- float은 글과 사진을 분리해서 위치를 지정해준다.
+        하지만 문제가 많아서 flex와 greed를 많이 쓴다.-->
+    <h1></h1>
     <hr>
-
     <fieldset>
         <img src="image/흰둥이.png" width="100">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita vero neque, possimus nobis facilis nesciunt minus excepturi et hic dolorum? Asperiores nobis omnis atque, ullam tempore numquam inventore odit excepturi?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea labore nam, tempore necessitatibus a vero rerum quae minima quasi officia velit natus, ut corporis. Excepturi, adipisci accusamus. Ullam, voluptates culpa!
     </fieldset>
     <br>
-
     <fieldset>
         <img src="image/흰둥이.png" width="100" style="float: left;">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita vero neque, possimus nobis facilis nesciunt minus excepturi et hic dolorum? Asperiores nobis omnis atque, ullam tempore numquam inventore odit excepturi?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea labore nam, tempore necessitatibus a vero rerum quae minima quasi officia velit natus, ut corporis. Excepturi, adipisci accusamus. Ullam, voluptates culpa!
     </fieldset>
     <br>
-
     <fieldset>
         <img src="image/흰둥이.png" width="100" style="float: right;">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita vero neque, possimus nobis facilis nesciunt minus excepturi et hic dolorum? Asperiores nobis omnis atque, ullam tempore numquam inventore odit excepturi?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea labore nam, tempore necessitatibus a vero rerum quae minima quasi officia velit natus, ut corporis. Excepturi, adipisci accusamus. Ullam, voluptates culpa!
     </fieldset>
-    <br>
-
     <fieldset>
         <img src="image/흰둥이.png" width="100" style="clear: both;">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita vero neque, possimus nobis facilis nesciunt minus excepturi et hic dolorum? Asperiores nobis omnis atque, ullam tempore numquam inventore odit excepturi?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea labore nam, tempore necessitatibus a vero rerum quae minima quasi officia velit natus, ut corporis. Excepturi, adipisci accusamus. Ullam, voluptates culpa!
     </fieldset>
-    <br>
     
 </body>
 </html>
