--- a/Momentum Project/Clock/index.html
+++ b/Momentum Project/Clock/index.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Momentom</title>
 </head>
-<body>
+
     <h1 class="hidden" id="login"> </h1>
     <h2 id="clock">00:00:00</h2>
+    <form id="todo-form">
+        <input type="text" placeholder="Write To do list and Press Enter" required>
+    </form>
+    <ul id="todo-list">
+    </ul>
     <div id="quote">
     <span></span>
     <span></span>    
@@ -17,5 +22,6 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 </html>
