--- a/day42/01-filter.html
+++ b/day42/01-filter.html
@@ -49,7 +49,9 @@
         <h1>01-filter.html</h1>
         <hr />
         <div id="filter">
-            <label for=""><input type="checkbox" id="plus" />양수</label>
+            <label for=""
+                ><input type="checkbox" id="plus" hidden="hidden" />양수</label
+            >
             <label for=""><input type="checkbox" id="minus" />음수</label>
             <label for=""><input type="checkbox" id="odd" />홀수</label>
             <label for=""><input type="checkbox" id="even" />짝수</label>
