--- a/momentum/index.html
+++ b/momentum/index.html
@@ -10,3 +10,6 @@
         <script src="app.js"></script>
     </body>
 </html>
+
+<!-- 브라우저는  HTML을 열고  HTML은 Css와 JS를 가져와주고 붙여주는 접착제 같은 역할을 한다.-->
+<!-- 하나는 CSS엔진 하나는 JS엔진이다. -->
