--- a/momentum/index.html
+++ b/momentum/index.html
@@ -3,14 +3,30 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <title>Momentum App</title>
     </head>
     <body>
-        <div class="hello">
-            <h1>Click me1!</h1>
+        <div id="quote">
+            <span></span>
+            <span></span>
         </div>
-        <script src="app.js"></script>
+        <form class="hidden" id="login-form">
+            <input
+                name="username"
+                type="text"
+                placeholder="What is your name?"
+                required
+                maxlength="15"
+            />
+            <input type="submit" value="Log In" />
+        </form>
+        <h2 id="clock">00:00</h2>
+        <h1 class="hidden" id="greeting"></h1>
+        <script src="js/greetings.js"></script>
+        <script src="js/clock.js"></script>
+        <script src="js/quotes.js"></script>
+        <script src="js/background.js"></script>
     </body>
 </html>
 
